# secret_santa_tgbot

./: .gitignore  Docker.Railway  Dockerfile  alembic.ini  alembic.sh  docker-compose-dev.yaml  main.py  requirements.txt  start.sh
migrations/: env.py
migrations/versions/: 063546e9495b_init.py  4484d9eb69be_create_tables.py  baf417119e1b_create_tables2.py  be608b831378_init.py
src/: .env  callback.py  main.py  pyproject.toml  settings.py  tools.py  yandex_ai.py
src/database/: __init__.py  database.py  initialize.py  user.py
src/database/models/: models.py
