[tool.poetry]
name = "secret-santa"
version = "0.1.0"
description = ""
authors = ["san0kq <sanrom94@mail.ru>"]
readme = "README.md"
packages = [{include = "secret_santa"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.2.0"
python-decouple = "^3.8"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
